crates/toml_edit/tests/snapshots/invalid/array/no-close-4.stderr
TOML parse error at line 1, column 25
  |
1 | no-close-4 = [{ key = 42
  |                         ^
newlines are unsupported in inline tables, expected nothing
